--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
             <version>4.11</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.5.1</version>
+        </dependency>
     </dependencies>
 
     <properties>
