--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,13 @@
             <artifactId>spring-security-core</artifactId>
             <version>5.5.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <properties>
